--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 .metadata/
 pizzacution.schema/.metadata
-pizzacution.guery/.metadata
-
+pizzacution.query/.metadata
+*.edit
+*.editor
+META-INF
+src-gen
