feat: Model to Tremplate transformation

--- a/Development/pizzacution.recipe/plugin.xml
+++ b/Development/pizzacution.recipe/plugin.xml
@@ -10,7 +10,7 @@
       <!-- @generated recipe -->
       <package
             uri="http://www.pizzacution.org/recipe"
-            class="pizzacution.recipe.recipe.RecipePackage"
+            class="pizzacution.recipe.RecipePackage"
             genModel="model/recipe.genmodel"/>
    </extension>
 
